# mailing_service

./: .env.sample  README.md  Readme.MD  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_views.py
config/: settings.py  urls.py
data/: auth_data.json  blog_data.json  mailing_data.json
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_alter_mailingattempt_mailing_id.py  0003_alter_mailingattempt_mailing_id_and_more.py  0004_remove_client_mailing_id_and_more.py  0005_alter_mailing_message.py  0006_alter_mailing_message.py  0007_remove_mailing_client_mailing_clients.py  0008_alter_mailing_message.py  0009_mailingmessage_created_at.py  0010_alter_mailingmessage_created_at.py  0011_mailing_created_at.py  0012_alter_mailing_options_alter_mailingmessage_options.py  0013_alter_mailing_status.py  0014_alter_mailing_status.py  0015_alter_mailing_finish_time.py  0016_alter_mailing_finish_time.py  0017_alter_mailing_options.py  0018_alter_mailingattempt_latest_attempt_and_more.py  0019_alter_mailingattempt_options.py  0020_rename_mailing_id_mailingattempt_mailing.py  0021_alter_mailingattempt_mailing.py  0022_alter_mailing_options.py  0023_client_user_mailing_user_mailingmessage_user.py  0024_alter_client_email.py  0025_alter_mailing_options_mailing_stopped_by_manager.py  0026_remove_mailing_stopped_by_manager_and_more.py  0027_alter_mailing_options_alter_mailingattempt_options_and_more.py
users/: admin.py  forms.py  models.py  urls.py  views.py
(+43 files in other folders)
